[project]
name = "qq-nodes-comfyui"
description = "Nodes:Any List, Image Accumulator Start, Image Accumulator End, Load Lines From Text File, XY Grid Helper, Slice List, Axis To String/Int/Float/Model, ..."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/kenjiqq/qq-nodes-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "qq-nodes-comfyui"
Icon = ""
