[project]
name = "qq-nodes-comfyui"
description = "Collection of nodes for generating XY Grids"
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/kenjiqq/qq-nodes-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kenjiqq"
DisplayName = "qq-nodes-comfyui"
Icon = ""
